# server/routes/authRoutes.js
@@ -1,9 +1,10 @@
 const express = require('express')
 const router = express.Router() 
 
-const {userSignup} = require("../controllers/authController")
+const {userSignup, userLogin} = require("../controllers/authController")
 const validateSignUp = require("../middlewares/authValidators")
   
 router.post("/signup", validateSignUp, userSignup)
+router.post("/login", userLogin)
 
 module.exports = router
